--- a/assets/css/File-Manager.css
+++ b/assets/css/File-Manager.css
@@ -21,3 +21,21 @@ a {
   color: inherit;
 }
 
+.btn {
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.file-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.file-item a {
+}
+
