--- a/assets/css/sticky-dark-top-nav-with-dropdown.css
+++ b/assets/css/sticky-dark-top-nav-with-dropdown.css
@@ -152,12 +152,18 @@
 }
 
 .btn {
-  border-radius: 5px;
-  font-size: 8px;
-  height: 22px;
-  margin: 5px;
-  margin-bottom: 5px;
-  margin-top: 5px;
+  /*border-radius: 5px;*/
+  /*font-size: 8px;*/
+  /*height: 22px;*/
+  /*margin: 5px;*/
+  /*margin-bottom: 5px;*/
+  /*margin-top: 5px;*/
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
 }
 
 a.navbar-brand.navbar-link {
@@ -193,10 +199,16 @@ a.navbar-link.login:hover {
 }
 
 .btn {
-  font-family: 'Roboto';
-  font-weight: 400;
-  border-width: 1px;
-  border-color: var(--bs-gray-400);
-  font-size: 8px;
+  /*font-family: 'Roboto';*/
+  /*font-weight: 400;*/
+  /*border-width: 1px;*/
+  /*border-color: var(--bs-gray-400);*/
+  /*font-size: 8px;*/
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
 }
 
